Add registration, login and feedback

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SafariBooking">
+        <activity android:name=".Feedback"></activity>
+        <activity android:name=".Register" />
+        <activity android:name=".Login" />
         <activity android:name=".viewTicketBooking">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,10 +21,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ticketsearch">
-
-        </activity>
-        <activity android:name=".mainpage"></activity>
+        <activity android:name=".ticketsearch" />
+        <activity android:name=".mainpage" />
         <activity android:name=".searchSafari" />
         <activity android:name=".MainActivity">
             <intent-filter>
