Create Tickets rates retrieve part and number of available ticket retrieve part

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SafariBooking">
-        <activity android:name=".UserProfile"></activity>
+        <activity android:name=".TicketRateTable"></activity>
+        <activity android:name=".UserProfile" />
         <activity android:name=".ForgetPassword" />
         <activity android:name=".Register">
             <intent-filter>
